Editing existing and adding new files to repository

--- a/html/forms.html
+++ b/html/forms.html
@@ -46,6 +46,15 @@
         <button>Go!</button>
 
     </form>
+    <br>
+      <form action="index.html">
+        <label for="parrots">parrots</label>
+        <input type="radio" id="parrots" name="petChoice" value="parrots">
+        <label for="morty">morty</label>
+          <input type="radio" id="morty" name="petChoice" value="morty">
+          <input type="submit">
+      </form>
+
 
   </body>
 </html>
