--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
     <title>Udemy website</title>
+
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
@@ -12,7 +15,6 @@
     <h2>MDN reference guide</h2>
     <h6>Smallest heading</h6>
 
-<div>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -32,48 +34,44 @@ sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
 
     <a href="https://google.com"><img style="width: 300px"
-src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png"
-alt="cutie pie"></a>
+    src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png"
+    alt="cutie pie"></a>
 
-<!-- <ol>
-  <li>Milk</li>
-  <li>Coffee
     <ul>
-      <li>Espresso
-        <ul>
-          <li>w/ Cold Milk</li>
-          <li>w/ Hot Milk</li>
-        </ul>
-      </li>
-      <li>Nescafe
-        <ul>
-          <li>w/ Cold Milk</li>
-          <li>w/ Hot Milk</li>
-        </ul>
-      </li>
+      <li>Milk</li>
+      <li>Coffee</li>
+      <li>Juice</li>
     </ul>
-  </li>
-  <li>Juice</li>
-</ol> -->
 
-</div>
-<br>
+    <ul>
+      <li>Milk</li>
+      <li>Coffee</li>
+      <li>Juice</li>
+    </ul>
 
-<table border="1">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-    </tr>
-  </thead>
+    <ul>
+      <li><input type="checkbox" name="checkmein"><a href="https://google.com">Milk</a></li>
+      <li><a href="https://wikipedia.org">Coffee</a></li>
+      <li><a href="https://facebook.com">Juice</a></li>
+    </ul>
 
-  <tbody>
-    <tr>
-      <td>Misko</td>
-      <td>6 months</td>
-    </tr>
-  </tbody>
-</table>
+    <br>
+
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>Misko</td>
+          <td>6 months</td>
+        </tr>
+      </tbody>
+    </table>
 
   </body>
 </html>
