--- a/html/lists.html
+++ b/html/lists.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/list.css">
     <title>Things I've learned</title>
   </head>
   <body>
@@ -16,15 +17,15 @@
 
     <h1>HTML</h1>
 
-    <ul>
+    <ul>class="coloring"
       <li>Stands for Hyper Text Markup Language</li>
       <li>Lots of tags
         <ul>
           <li>Boilerplate
             <ol>
-              <li>Doctype</li>
-              <li>HTML</li>
-              <li>Head
+              <li class="coloring">Doctype</li>
+              <li class="coloring">HTML</li>
+              <li class="coloring">Head
                 <ol>
                   <li>Title</li>
                 </ol>
